--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <button onclick="selectLevel('Medium')">Medium</button>
         <button onclick="selectLevel('Expert')">Expert</button>
     </div>
+    <div class="image">
+        <button onclick="getSmile()">😀</button>
+    </div>
+    <div class="live"></div>
     <table class="mine" oncontextmenu="return false;">
         <tbody>
         </tbody>
@@ -24,11 +28,9 @@
         <span id="shown-count">0</span> cells shown |
         <span id="marked-count">0</span> cells marked
     </div>
-    <div class="game_over">
     </div>
     <script src="js/game.js"></script>
     <script src="js/utils.js"></script>
-
 
 </body>
 
