--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <button id="smile" onclick="onInit()">😀</button>
         <br>
         <span id="live">❤️❤️❤️</span>
+        <!-- <button id="light1" onclick="isHint1()">💡</button>
+        <button id="light2" onclick="isHint2()">💡</button>
+        <button id="light3" onclick="isHint3()">💡</button> -->
     </div>
     <table class="mine" oncontextmenu="return false;">
         <tbody>
